--- a/README.org
+++ b/README.org
@@ -16,7 +16,6 @@ Metrics are:
 * Install
 #+begin_src sh
 cd /tmp/
-git clone 
 python3.8 -m pip install git+https://github.com/axeoman/webmonitor.git
 #+end_src
 * Configuration
@@ -50,10 +49,9 @@ websites:
     regexp: '^NEVERMATCH$'
 #+end_src
 
-* Run
+* Run 
 You can run `checker` and `saver` components:
-- `checker` - kafka consumer checks every website mentioned in config file for
-availability and pushes metrics to kafka topic
+- `checker` - kafka consumer checks every website mentioned in config file for availability and pushes metrics to kafka topic
 - `saver` - kafka producer reads topic and saves metrics into PostgreSQL database
 
 #+begin_src sh
@@ -63,6 +61,14 @@ webmonitor checker -c config.yml
 #+begin_src sh
 webmonitor saver -c config.yml
 #+end_src
+
+* Run tests
+You can run all available tests like so:
+#+begin_src sh
+git clone https://github.com/axeoman/webmonitor.git
+python3.8 setup.py test
+#+end_src
+
 
 * Improvements need to be done
 - [ ] Tests
